Added Tekton predeploy app

--- a/0-bootstrap/hub/2-services/argocd/instances/tekton/backstage/predeploy/git-cli-resources.yaml
+++ b/0-bootstrap/hub/2-services/argocd/instances/tekton/backstage/predeploy/git-cli-resources.yaml
@@ -1,7 +1,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: tekton-rbac
+  name: tekton-git-cli-predeploy
   annotations:
     argocd.argoproj.io/sync-wave: "215"
   labels:
@@ -12,7 +12,7 @@ spec:
     server: https://kubernetes.default.svc
   project: services
   source:
-    path: instances/tekton/rbac
+    path: instances/tekton/backstage/predeploy
   syncPolicy:
     automated:
       prune: true
