--- a/0-bootstrap/hub/2-services/kustomization.yaml
+++ b/0-bootstrap/hub/2-services/kustomization.yaml
@@ -71,6 +71,9 @@ resources:
 
  ### DevSecOps 
 
+ #### DevSecOps - PreReqs
+ - argocd/instances/tekton/backstage/predeploy/git-cli-resources.yaml
+
  #### DevSecOps - Tekton Tasks
  #  - argocd/instances/tekton/backstage/devsecops/task/tekton-tasks.yaml
  #### DevSecOps - Pipeline component
