Added cluster app

--- a/0-bootstrap/hub/4-clusters/kustomization.yaml
+++ b/0-bootstrap/hub/4-clusters/kustomization.yaml
@@ -44,6 +44,9 @@ resources:
  #- argocd/submariner/add-existing-clusters.yaml
  #- argocd/submariner/configure-azure.yaml
  #- argocd/submariner/deploy-submariner.yaml
+
+ # IDP - Cluster Cruds - Sample
+ - argocd/idp/developers/clusters/govtech.yaml
  
 patches:
 - target:
