Ignoring differences for installed field

--- a/0-bootstrap/hub/4-clusters/argocd/idp/developers/clusters/govtech.yaml
+++ b/0-bootstrap/hub/4-clusters/argocd/idp/developers/clusters/govtech.yaml
@@ -10,6 +10,10 @@ metadata:
     - resources-finalizer.argocd.argoproj.io
 spec:
   destination:
+  ignoreDifferences:
+    - jsonPointers:
+        - /spec/installed
+      kind: ClusterDeployment
     namespace: govtech
     server: 'https://kubernetes.default.svc'
   project: clusters
