--- a/0-bootstrap/hub/4-clusters/argocd/idp/developers/clusters/govtech.yaml
+++ b/0-bootstrap/hub/4-clusters/argocd/idp/developers/clusters/govtech.yaml
@@ -11,9 +11,10 @@ metadata:
 spec:
   destination:
   ignoreDifferences:
-    - jsonPointers:
-        - /spec/installed
-      kind: ClusterDeployment
+  - group:  hive.openshift.io
+    kind: ClusterDeployment
+    jsonPointers:
+    - /spec/installed
     namespace: govtech
     server: 'https://kubernetes.default.svc'
   project: clusters
