--- a/0-bootstrap/hub/4-clusters/argocd/idp/developers/clusters/govtech.yaml
+++ b/0-bootstrap/hub/4-clusters/argocd/idp/developers/clusters/govtech.yaml
@@ -1,7 +1,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: backstage
+  name: govtech-managed-cluster
   annotations:
     argocd.argoproj.io/sync-wave: "440"
   labels:
