--- a/0-bootstrap/spokeclusters/idp/developers/sample.yaml
+++ b/0-bootstrap/spokeclusters/idp/developers/sample.yaml
@@ -1,3 +1,8 @@
+apiVersion: v1
+kind: Namespace
+metadata:
+  name: lambda
+
 # apiVersion: mq.ibm.com/v1beta1
 # kind: QueueManager
 # metadata:
@@ -29,10 +34,10 @@
 #   web:
 #     enabled: true
 
-apiVersion: v1
-kind: Namespace
-metadata:
-  name: lambda
+# apiVersion: v1
+# kind: Namespace
+# metadata:
+#   name: lambda
 
 # apiVersion: argoproj.io/v1alpha1
 # kind: Application
