--- a/0-bootstrap/spokeclusters/idp/developers/test.yaml
+++ b/0-bootstrap/spokeclusters/idp/developers/test.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Namespace
 metadata:
-  name: lambda
+  name: runespace
 
 # apiVersion: mq.ibm.com/v1beta1
 # kind: QueueManager
