--- a/0-bootstrap/spokeclusters/idp/developers/kustomization.yaml
+++ b/0-bootstrap/spokeclusters/idp/developers/kustomization.yaml
@@ -1,5 +1,10 @@
-apiVersion: kustomize.config.k8s.io/v1beta1
-kind: Kustomization
+apiVersion: v1
+kind: Namespace
+metadata:
+  name: runespace
 
-resources:
-  - test.yaml
+---
+apiVersion: v1
+kind: Namespace
+metadata:
+  name: scratchspace
