--- a/0-bootstrap/hub/2-services/kustomization.yaml
+++ b/0-bootstrap/hub/2-services/kustomization.yaml
@@ -105,6 +105,10 @@ resources:
  - argocd/instances/tekton/backstage/resource-generation/cloudpak/cp4i/mq/route/route.yaml
  - argocd/instances/tekton/backstage/resource-generation/cloudpak/cp4i/mq/trigger/trigger.yaml
  
+ #### Resource Generation - ACE
+ - argocd/instances/tekton/backstage/resource-generation/cloudpak/cp4i/ace/task/tekton-tasks.yaml
+ - argocd/instances/tekton/backstage/resource-generation/cloudpak/cp4i/ace/pipeline/pipeline.yaml
+ 
  # Ansible Automation Platform
 #  - argocd/operators/ansible-automation-platform-operator.yaml
 #  - argocd/instances/ansible-automation-platform-controller-instance.yaml
