--- a/0-bootstrap/spokeclusters/idp/developers/clusters/govtech/kustomization.yaml
+++ b/0-bootstrap/spokeclusters/idp/developers/clusters/govtech/kustomization.yaml
@@ -61,7 +61,7 @@ apiVersion: appconnect.ibm.com/v1beta1
 kind: IntegrationServer
 metadata:
   name: mq-consumer
-  namespace: govtech # ClusterName from user input. Remember clusterName is mapped to a unique NS on the managed cluster.
+  namespace: govtech
 spec:
   enableMetrics: false
   license:
@@ -87,6 +87,6 @@ spec:
     endpointType: http
   version: '12.0'
   replicas: 1
-  barURL: https://github.com/Mattar555/idp-ace-artefacts/idp-fry-simple.bar # GitRepo and FileName location from User Input
+  barURL: https://github.com/Mattar555/idp-ace-artefacts/idp-fry-simple.bar
   configurations:
-    - ace-app-config # Remember, this is hardcoded for the time being.
+    - ace-app-config
