--- a/0-bootstrap/spokeclusters/idp/developers/clusters/govtech/kustomization.yaml
+++ b/0-bootstrap/spokeclusters/idp/developers/clusters/govtech/kustomization.yaml
@@ -61,7 +61,7 @@ apiVersion: appconnect.ibm.com/v1beta1
 kind: IntegrationServer
 metadata:
   name: mq-consumer
-  namespace: govtech
+  namespace: default
 spec:
   enableMetrics: false
   license:
