--- a/0-bootstrap/spokeclusters/idp/developers/clusters/govtech/kustomization.yaml
+++ b/0-bootstrap/spokeclusters/idp/developers/clusters/govtech/kustomization.yaml
@@ -87,6 +87,6 @@ spec:
     endpointType: http
   version: '12.0'
   replicas: 1
-  barURL: https://github.com/Mattar555/idp-ace-artefacts/idp-fry-simple.bar
+  barURL: "https://github.com/Mattar555/idp-ace-artefacts/idp-fry-simple.bar"
   configurations:
     - ace-app-config
